# agentic_ai_engineering_course_projects

./: README.md
crewai_projects/: main.py  pyproject.toml
crewai_projects/llm_debate/: README.md  pyproject.toml
crewai_projects/llm_debate/output/: decide.md  oppose.md  propose.md
crewai_projects/llm_debate/src/llm_debate/: crew.py  gradio_ui.py  main.py
crewai_projects/llm_debate/src/llm_debate/config/: agents.yaml
deep_research/: README.md  clarification_agent.py  deep_research.py  planner_agent.py  research_manager.py
openai_sdk_projects/deep_research/: clarification_agent.py  deep_research.py  requirements.txt  research_manager.py  writer_agent.py
